[package]
name = "progress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
actix-rt = "2.7.0"
actix-web = "4.1.0"
dotenv = "0.15.0"
listenfd = "1.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
